--- a/src/plugin/Xrm.Oss.PowerKanban.Tests/packages.config
+++ b/src/plugin/Xrm.Oss.PowerKanban.Tests/packages.config
@@ -8,4 +8,5 @@
   <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.0.5" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net452" />
   <package id="NUnit" version="3.12.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net462" developmentDependency="true" />
 </packages>
