--- a/src/web/package.json
+++ b/src/web/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/bluebird": "^3.5.32",
+    "@types/html-to-text": "^5.1.1",
     "@types/react": "^16.9.38",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^16.9.8",
     "@types/xrm": "^9.0.27",
+    "html-to-text": "^5.1.1",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
     "react": "^16.13.1",
