--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,20 +13,18 @@
     "@types/powerapps-component-framework": "^1.2.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fluentui/react": "^7.127.1",
     "@types/bluebird": "^3.5.32",
     "@types/html-to-text": "^5.1.1",
     "@types/react": "^16.9.38",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^16.9.8",
     "@types/xrm": "^9.0.27",
+    "@uifabric/react-cards": "^0.110.21",
     "html-to-text": "^5.1.1",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
