--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     
     - uses: actions/checkout@v4
+    - run: cd src
+    - run: cd web
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
