--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,8 +11,8 @@ on:
 
 
 defaults:
- run:
-  working-directory: ./src/web
+  run:
+    working-directory: ./src/web
 jobs:
   build:
 
@@ -20,14 +20,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [ 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     
     - uses: actions/checkout@v4
-    - run: cd src
-    - run: cd web
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
