--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,11 +31,9 @@ jobs:
       
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: './src/web/package-lock'
-    - name: CI
+    - name: insrall
       working-directory: ./src/web
-      run: npm ci
+      run: npm install
     - name: Build
       working-directory: ./src/web
       run: npm run build --if-present --buildMode production
