--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,6 @@ jobs:
       run: npm install
     - name: Build
       working-directory: ./src/web
-      run: npm run build --if-present --buildMode production
+      run: npm run build  #--buildMode production
     - run: npm test
       working-directory: ./sec/web
